--- a/UniversityCollege_cssCleanup/scss/_home.scss
+++ b/UniversityCollege_cssCleanup/scss/_home.scss
@@ -38,6 +38,14 @@
 	margin: 18px 0 20px 0;
 }
 
+.ucol-news, .article{
+	.articleImage {
+		display: inline-block;
+		margin-right: 10px;
+		vertical-align: top;
+	}
+}
+
 .ucol-news{
 	padding: 15px 0;
 	border-top: 1px solid #c6c6c6;
@@ -51,19 +59,24 @@
 	&:first-child{
 		border-top:none;
 	}
-	.articleImage {
-		display: inline-block;
-		margin-right: 10px;
-		vertical-align: top;
-	}
 	.articleLatestSummary {
 		display: inline-block;
 		width: 75%;
 		a{
-			float:left;
 			display: block;
-			padding-top: 10px;
+			padding-top: 3px;
 		}
+	}
+}
+
+.article{
+	margin-bottom:20px;
+	.articleSummary{
+		display:inline-block;
+		width:86%;
+	}
+	.articleCategories{
+		padding-bottom:20px;
 	}
 }
 
@@ -104,7 +117,7 @@
 		padding-bottom: 10px;
 		font-family:Georgia, "Times New Roman" serif;
 		font-size:10pt;
-		float:left;
+		display:block;
 		text-transform: uppercase;
 	}
 }
