--- a/UniversityCollege_cssCleanup/scss/_interior.scss
+++ b/UniversityCollege_cssCleanup/scss/_interior.scss
@@ -46,9 +46,6 @@
 		font-family:Arial, Helvetica, sans-serif;
 		font-size:13px;
 		color: #444444;
-		p{
-			text-align: left !important;
-		}
 	}
 	p{
 		margin: 0 0 10px;
